fix(dialog): correct class attribute to className in DialogContent component

--- a/src/components/ui/dialog/DialogContent.astro
+++ b/src/components/ui/dialog/DialogContent.astro
@@ -60,6 +60,6 @@ const { class: className, animationDuration = 200, ...rest } = Astro.props;
 		data-dialog-close
 		aria-label="Close dialog"
 	>
-		<X class="size-5" />
+		<X className="size-5" />
 	</button>
 </dialog>
