--- a/src/components/ui/dialog/DialogContent.astro
+++ b/src/components/ui/dialog/DialogContent.astro
@@ -4,15 +4,12 @@ import type { HTMLAttributes } from "astro/types";
 import { tv } from "tailwind-variants";
 
 type Props = HTMLAttributes<"dialog"> & {
-  /**
-   * Open and close animation duration in milliseconds
-   */
   animationDuration?: number;
 };
 
 const dialogBackdrop = tv({
   base: [
-    "dialog-backdrop fixed inset-0 top-0 left-0 z-50 hidden h-screen w-screen bg-black/80",
+    "dialog-backdrop fixed inset-0 z-50 hidden h-screen w-screen bg-black/80",
     "data-[state=open]:animate-in data-[state=open]:fade-in-0",
     "data-[state=closed]:animate-out data-[state=closed]:fade-out-0",
   ],
@@ -20,8 +17,8 @@ const dialogBackdrop = tv({
 
 const dialogContent = tv({
   base: [
-    "fixed top-16 left-[50%] z-50 translate-x-[-50%] sm:top-[50%] sm:translate-y-[-50%]",
-    "bg-background w-full max-w-md border p-8 shadow-lg sm:rounded-lg",
+    "fixed top-16 left-1/2 z-50 w-full max-w-md border bg-background p-8 shadow-lg sm:rounded-lg",
+    "transform -translate-x-1/2 sm:top-1/2 sm:-translate-y-1/2",
     "data-[state=open]:animate-in data-[state=closed]:animate-out",
     "data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 data-[state=open]:slide-in-from-bottom-2",
     "data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=closed]:slide-out-to-bottom-2",
@@ -30,20 +27,19 @@ const dialogContent = tv({
 
 const dialogCloseButton = tv({
   base: [
-    "dialog-close text-muted-foreground",
-    "absolute top-5.5 right-5.5 rounded-sm opacity-70 transition-opacity hover:opacity-100 disabled:pointer-events-none",
-    "focus-visible:outline-outline focus-visible:outline-2 focus-visible:outline-offset-2",
+    "dialog-close absolute top-5 right-5 text-muted-foreground rounded-sm opacity-70 transition-opacity hover:opacity-100",
+    "disabled:pointer-events-none focus-visible:outline-outline focus-visible:outline-2 focus-visible:outline-offset-2",
   ],
 });
 
 const { class: className, animationDuration = 200, ...rest } = Astro.props;
 ---
 
-<!-- dialog overlay -->
 <div
   class={dialogBackdrop()}
   data-state="closed"
-  style={{ animationDuration: `${animationDuration}ms` }}
+  style={`animation-duration: ${animationDuration}ms`}
+  aria-hidden="true"
 >
 </div>
 
@@ -51,9 +47,12 @@ const { class: className, animationDuration = 200, ...rest } = Astro.props;
   class={dialogContent({ class: className })}
   data-state="closed"
   {...rest}
-  style={{ animationDuration: `${animationDuration}ms` }}
+  style={`animation-duration: ${animationDuration}ms`}
+  aria-modal="true"
+  role="dialog"
 >
   <slot />
+
   <button
     type="button"
     class={dialogCloseButton()}
