--- a/src/components/ui/dialog/DialogDescription.astro
+++ b/src/components/ui/dialog/DialogDescription.astro
@@ -1,14 +1,26 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { tv } from "tailwind-variants";
+import { cva, type VariantProps } from "class-variance-authority";
+import { cn } from "@/lib/utils";
 
-type Props = HTMLAttributes<"p">;
+type Props = HTMLAttributes<"p"> & VariantProps<typeof dialogDescription>;
 
-const dialogDescription = tv({ base: "text-muted-foreground" });
+const dialogDescription = cva("text-muted-foreground", {
+  variants: {
+    size: {
+      sm: "text-sm",
+      md: "text-base",
+      lg: "text-lg",
+    },
+  },
+  defaultVariants: {
+    size: "md",
+  },
+});
 
-const { class: className, ...rest } = Astro.props;
+const { class: className, size, ...rest } = Astro.props;
 ---
 
-<p class={dialogDescription({ class: className })} {...rest}>
+<p class={cn(dialogDescription({ size }), className)} {...rest}>
 	<slot />
 </p>
