--- a/src/components/ui/dialog/DialogHeader.astro
+++ b/src/components/ui/dialog/DialogHeader.astro
@@ -1,16 +1,25 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { tv } from "tailwind-variants";
+import { cva, type VariantProps } from "class-variance-authority";
+import { cn } from "@/lib/utils";
 
-type Props = HTMLAttributes<"div">;
+type Props = HTMLAttributes<"div"> & VariantProps<typeof dialogHeader>;
 
-const dialogHeader = tv({
-  base: "flex flex-col space-y-2 text-center sm:text-left",
+const dialogHeader = cva("flex flex-col space-y-2", {
+  variants: {
+    align: {
+      center: "text-center",
+      left: "sm:text-left",
+    },
+  },
+  defaultVariants: {
+    align: "left",
+  },
 });
 
-const { class: className, ...rest } = Astro.props;
+const { class: className, align, ...rest } = Astro.props;
 ---
 
-<div class={dialogHeader({ class: className })} {...rest}>
-	<slot />
+<div class={cn(dialogHeader({ align }), className)} {...rest}>
+  <slot />
 </div>
