--- a/src/components/ui/dialog/DialogTitle.astro
+++ b/src/components/ui/dialog/DialogTitle.astro
@@ -1,18 +1,27 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { tv } from "tailwind-variants";
+import { cva, type VariantProps } from "class-variance-authority";
+import { cn } from "@/lib/utils";
 
-type Props = Omit<HTMLAttributes<"h2">, "id"> & {
-  children: any;
-};
+type Props = Omit<HTMLAttributes<"h2">, "id"> &
+  VariantProps<typeof dialogTitle>;
 
-const dialogTitle = tv({
-  base: "text-2xl leading-none font-semibold tracking-tight",
+const dialogTitle = cva("text-2xl font-semibold tracking-tight leading-none", {
+  variants: {
+    size: {
+      sm: "text-xl",
+      md: "text-2xl",
+      lg: "text-3xl",
+    },
+  },
+  defaultVariants: {
+    size: "md",
+  },
 });
 
-const { class: className, ...rest } = Astro.props;
+const { class: className, size, ...rest } = Astro.props;
 ---
 
-<h2 class={dialogTitle({ class: className })} {...rest}>
+<h2 class={cn(dialogTitle({ size }), className)} {...rest}>
   <slot />
 </h2>
