--- a/src/components/ui/dialog/DialogDescription.astro
+++ b/src/components/ui/dialog/DialogDescription.astro
@@ -1,26 +1,12 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { cva, type VariantProps } from "class-variance-authority";
 import { cn } from "@/lib/utils";
 
-type Props = HTMLAttributes<"p"> & VariantProps<typeof dialogDescription>;
+interface Props extends HTMLAttributes<"p"> {}
 
-const dialogDescription = cva("text-muted-foreground", {
-  variants: {
-    size: {
-      sm: "text-sm",
-      md: "text-base",
-      lg: "text-lg",
-    },
-  },
-  defaultVariants: {
-    size: "md",
-  },
-});
-
-const { class: className, size, ...rest } = Astro.props;
+const { class: className = "", ...rest } = Astro.props as Props;
 ---
 
-<p class={cn(dialogDescription({ size }), className)} {...rest}>
-	<slot />
+<p class={cn("text-muted-foreground text-sm", className)} {...rest}>
+  <slot />
 </p>
