--- a/src/components/ui/dialog/DialogHeader.astro
+++ b/src/components/ui/dialog/DialogHeader.astro
@@ -1,25 +1,15 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { cva, type VariantProps } from "class-variance-authority";
 import { cn } from "@/lib/utils";
 
-type Props = HTMLAttributes<"div"> & VariantProps<typeof dialogHeader>;
+interface Props extends HTMLAttributes<"div"> {}
 
-const dialogHeader = cva("flex flex-col space-y-2", {
-  variants: {
-    align: {
-      center: "text-center",
-      left: "sm:text-left",
-    },
-  },
-  defaultVariants: {
-    align: "left",
-  },
-});
-
-const { class: className, align, ...rest } = Astro.props;
+const { class: className = "", ...rest } = Astro.props;
 ---
 
-<div class={cn(dialogHeader({ align }), className)} {...rest}>
+<div
+  class={cn("flex flex-col gap-2 text-center sm:text-left", className)}
+  {...rest}
+>
   <slot />
 </div>
