--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -51,7 +51,7 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
                 alt="Me"
               />
             </DialogTrigger>
-            <DialogContent class="sm:max-w-[450px]" animationDuration={200}>
+            <DialogContent>
               <Image
                 class="mt-4 h-auto max-w-full rounded-lg"
                 src={image}
