--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -51,9 +51,9 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
                 alt="Me"
               />
             </DialogTrigger>
-            <DialogContent>
+            <DialogContent class="text-white p-0">
               <Image
-                class="mt-4 h-auto max-w-full rounded-lg"
+                class="h-auto max-w-full rounded-lg"
                 src={image}
                 alt="Me"
               />
