feat: support dialog (#194)
LCo-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -7,6 +7,17 @@ import {
   CardTitle,
 } from "@/components/ui/card";
 
+import {
+  Dialog,
+  DialogContent,
+  DialogDescription,
+  DialogFooter,
+  DialogHeader,
+  DialogTitle,
+  DialogTrigger,
+  DialogClose,
+} from "@/components/ui/dialog";
+
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
 
@@ -18,25 +29,36 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 });
 ---
 
-<Card className='p-2 lg:col-span-2 xl:col-span-4'>
+<Card className="p-2 lg:col-span-2 xl:col-span-4">
   <CardHeader>
-    <CardTitle className='font-medium tracking-tight text-primary md:text-6xl'>
+    <CardTitle className="font-medium tracking-tight text-primary md:text-6xl">
       Gallery
     </CardTitle>
-    <CardDescription className='mt-4 text-sm'>
+    <CardDescription className="mt-4 text-sm">
       One day, you'll leave this world behind so live a life you will remember.
     </CardDescription>
   </CardHeader>
-  <CardContent className='columns-1 gap-4 md:columns-2'>
+  <CardContent className="columns-1 gap-4 md:columns-2">
     {
       imagePaths.map(async (imagePath) => {
         const image = images[imagePath]();
         return (
-          <Image
-            class='mt-4 h-auto max-w-full rounded-lg'
-            src={image}
-            alt='Me'
-          />
+          <Dialog>
+            <DialogTrigger asChild>
+              <Image
+                class="mt-4 h-auto max-w-full rounded-lg"
+                src={image}
+                alt="Me"
+              />
+            </DialogTrigger>
+            <DialogContent class="text-white p-0">
+              <Image
+                class="h-auto max-w-full rounded-lg"
+                src={image}
+                alt="Me"
+              />
+            </DialogContent>
+          </Dialog>
         );
       })
     }
