--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -7,16 +7,7 @@ import {
   CardTitle,
 } from "@/components/ui/card";
 
-import {
-  Dialog,
-  DialogContent,
-  DialogDescription,
-  DialogFooter,
-  DialogHeader,
-  DialogTitle,
-  DialogTrigger,
-  DialogClose,
-} from "@/components/ui/dialog";
+import { Dialog, DialogContent, DialogTrigger } from "@/components/ui/dialog";
 
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
