--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,31 +1,29 @@
 ---
 import { Image } from "astro:assets";
-
 import { Card, CardContent, CardHeader } from "@/components/ui/card";
-
 import Avatar from "@/assets/avatar.jpg";
 ---
 
-<Card className='p-8'>
+<Card className="p-8">
   <CardHeader>
-    <div class='relative flex items-center gap-x-4'>
+    <div class="relative flex items-center gap-x-4">
       <Image
         src={Avatar}
-        alt='My name is Long Nhat Nguyen'
-        class='size-12 rounded-full'
+        alt="My name is Long Nhat Nguyen"
+        class="size-12 rounded-full"
       />
-      <p class='text-sm font-semibold leading-6 text-primary'>
+      <p class="text-sm font-semibold leading-6 text-primary">
         Long Nhat Nguyen
       </p>
     </div>
   </CardHeader>
   <CardContent>
     <p
-      class='mt-6 text-3xl font-medium tracking-tight text-primary lg:text-4xl'
+      class="mt-6 text-3xl font-medium tracking-tight text-primary lg:text-4xl"
     >
       Hello humans,
     </p>
-    <p class='mt-4 text-sm font-light text-muted-foreground lg:text-xl'>
+    <p class="mt-4 text-sm font-light text-muted-foreground lg:text-xl">
       My name is Long Nhat Nguyen. I'm only an individual who loves music,
       photography, tech, and nature.
       <br />
