--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,12 +74,7 @@
 }
 
 @theme inline {
-  --font-sans: Geist Sans, Geist Sans override, ui-sans-serif, system-ui,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
-  --font-heading: Geist Sans, Geist Sans override, ui-sans-serif, system-ui,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+  --font-sans: var(--font-mona-sans);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
