--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -53,7 +53,7 @@ const getAltFromPath = (path: string) => {
               loading="lazy"
             />
           </DialogTrigger>
-          <DialogContent class="text-white p-0">
+          <DialogContent class="p-0">
             <Image
               class="h-auto max-w-full rounded-lg"
               src={image}
